In Progress: Finishing pipeline to add features for a game

--- a/bin/modelling/modelling_one.ipynb
+++ b/bin/modelling/modelling_one.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import import_ipynb\n",
     "from sklearn import svm\n",
     "from pymysql import connect\n",
-    "from pathlib import Path\n",
+    "from sys import path\n",
     "path.append('../../../') \n",
     "from BaseballAnalytics.bin.app_utils.queries import Queries\n",
     "import numpy"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,22 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(('TEX199004090', 1990, 9, 4),\n ('SLN199004090', 1990, 9, 4),\n ('OAK199004090', 1990, 9, 4),\n ('CAL199004090', 1990, 9, 4),\n ('CHA199004090', 1990, 9, 4))"
+      "text/plain": "(('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0),\n ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1),\n ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0),\n ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1),\n ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1))"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 3
     }
    ],
    "source": [
-    "# Get all the game ids. The information is returned as the Game Id, Year, Date, an Month.\n",
-    "all_game_ids = qu.get_all_game_ids()         \n",
-    "all_game_ids[0:5]"
+    "# Get all the game ids. The information is returned as \n",
+    "#    (Game_ID, year, day, month, Home_Score, Vis_Score, Home_Team, Visitng_Team, Home_Win) where a winning home team is flagged at 0.\n",
+    "game_outcomes = qu.get_game_outcomes()         \n",
+    "game_outcomes[0:5]"
    ]
   },
   {
@@ -62,7 +63,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Acquire only the outcomes.\n",
+    "game_only_outcomes = qu.get_only_outcomes()\n",
+    "game_only_outcomes[0:5]"
+   ]
   },
   {
    "cell_type": "code",
@@ -81,27 +86,7 @@
      ]
     }
    ],
-   "source": [
-    "players_in_game = \"\"\"\n",
-    "select Distinct game_day.Game_ID, batter_in_event.Batting_Team, pitcher_in_event.Pitcher_Name,       # Home Team equals One for Batting Team\n",
-    "event_catcher.Catcher, event_centre_field.Center_Field, event_left_field.Left_Field,\n",
-    "event_right_field.Right_Field, event_first_base.First_Base, event_second_base.Second_Base, \n",
-    "event_third_base.Third_Base, event_shortstop.Shortstop\n",
-    "    from game_day\n",
-    "\tinner join event_instance on game_day.Game_ID=event_instance.Game_ID\n",
-    "\tinner join batter_in_event on event_instance.idEvent=batter_in_event.idEvent\n",
-    "    inner join pitcher_in_event on pitcher_in_event.idEvent=event_instance.idEvent\n",
-    "    inner join event_catcher on event_catcher.idEvent=event_instance.idEvent\n",
-    "    inner join event_centre_field on event_centre_field.idEvent=event_instance.idEvent\n",
-    "    inner join event_left_field on event_left_field.idEvent=event_instance.idEvent\n",
-    "    inner join event_right_field on event_right_field.idEvent=event_instance.idEvent\n",
-    "    inner join event_first_base on event_first_base.idEvent=event_instance.idEvent\n",
-    "    inner join event_second_base on event_second_base.idEvent=event_instance.idEvent\n",
-    "    inner join event_third_base on event_third_base.idEvent=event_instance.idEvent\n",
-    "    inner join event_shortstop on event_shortstop.idEvent=event_instance.idEvent\n",
-    "    where event_instance.Game_ID = '{}' order by batter_in_event.batting_team, CHAR_LENGTH(event_instance.idEvent), event_instance.idEvent;\n",
-    "    \"\"\".format(game_id)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
