Fix: Features were not being inputted since there were Null values

--- a/bin/modelling/model_one.ipynb
+++ b/bin/modelling/model_one.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "path.append('../../../') \n",
     "from BaseballAnalytics.bin.app_utils.queries import Queries\n",
     "from BaseballAnalytics.bin.app_utils.common_help import Log_Helper\n",
-    "import numpy"
+    "from pickle import dump, load"
    ]
   },
   {
@@ -124,6 +124,8 @@
     "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v1')\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
     "batters_pickle = 'game_players.pickle'\n",
+    "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
+    "offensive_features = qu.get_all_offensive_features(data_locs / offensive_feat_pickle)\n",
     "all_pitcher = qu.get_pitchers_in_all_games_vOne(data_locs / pitchers_pickle)\n",
     "all_batters = qu.get_batters_in_all_games_vOne(data_locs / batters_pickle)"
    ]
@@ -141,7 +143,6 @@
    ],
    "source": [
     "# Gather all the features from every game.\n",
-    "from pickle import dump\n",
     "features_pickle = 'game_features.pickle'\n",
     "lh = Log_Helper()\n",
     "all_features = {}\n",
@@ -149,7 +150,7 @@
     "lh.print_progress_bar(0, num_games, prefix = 'Progress:', suffix = 'Complete', length = 50)    # Initial call to print 0% progress\n",
     "counter = 0\n",
     "for num, game_id in enumerate(game_ids):\n",
-    "    all_features[game_id] = qu.get_game_features(all_batters, all_pitcher, game_id)\n",
+    "    all_features[game_id] = qu.get_game_features(all_batters, all_pitcher, offensive_features, game_id)\n",
     "    lh.print_progress_bar(num + 1, num_games, prefix = 'Progress:', suffix = 'Complete', length = 50)\n",
     "    counter += 1\n",
     "    if counter > 20:\n",
@@ -160,27 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "8.0.00013099999978294363\n"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": []
