New: Beginning work on next gen modelling

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The intent of the notebook is to begin modelling the baseball data. This will likely not be the final model, \n",
-    "#     however, it will act as a building block to more advanced models.\n",
-    "# Features: 9 Batters (10 Day Moving Average BA, OBP, SLG), 1 Starting Pitcher (10 Day Moving Average Ks, RAs, WHIP)\n",
+    "# This will be the next generation of model. The model will aim to include all relief pitchers as well as standardising the data.\n",
+    "# Features: TBD\n",
     "# Version: 1.0"
    ]
   },
@@ -24,7 +23,7 @@
     "from sys import path\n",
     "from pathlib import Path\n",
     "path.append('../../../') \n",
-    "from BaseballAnalytics.bin.app_utils.queries import Queries\n",
+    "from BaseballAnalytics.bin.app_utils.queries_vTwo import Queries\n",
     "from BaseballAnalytics.bin.app_utils.common_help import Log_Helper\n",
     "from pickle import dump, load"
    ]
@@ -48,17 +47,16 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(('BOS199004090', 1990, 9, 4, 5, 2, 'BOS', 'DET', 0),\n ('CAL199004090', 1990, 9, 4, 4, 7, 'CAL', 'SEA', 1),\n ('CHA199004090', 1990, 9, 4, 2, 1, 'CHA', 'MIL', 0),\n ('HOU199004090', 1990, 9, 4, 4, 8, 'HOU', 'CIN', 1),\n ('KCA199004090', 1990, 9, 4, 6, 7, 'KCA', 'BAL', 1))"
+      "text/plain": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1),\n ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0),\n ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0),\n ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0),\n ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1)]"
      },
      "metadata": {},
      "execution_count": 4
     }
    ],
    "source": [
-    "# Get all the game ids. The information is returned as \n",
-    "#    (Game_ID, year, day, month, Home_Score, Vis_Score, Home_Team, Visitng_Team, Home_Win) where a winning home team is flagged at 0.\n",
-    "game_outcomes = qu.get_game_outcomes()         \n",
-    "game_outcomes[0:5]"
+    "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
+    "game_outcomes = qu.get_game_outcomes(day=15, month=5)            \n",
+    "print(game_outcomes[0:5])"
    ]
   },
   {
@@ -69,49 +67,16 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1),\n ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0),\n ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0),\n ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0),\n ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1),\n ('KCA199004150', 1990, 15, 4, 4, 5, 'KCA', 'TOR', 1),\n ('MON199004150', 1990, 15, 4, 3, 1, 'MON', 'NYN', 0),\n ('NYA199004150', 1990, 15, 4, 3, 1, 'NYA', 'TEX', 0),\n ('PHI199004150', 1990, 15, 4, 4, 0, 'PHI', 'SLN', 0),\n ('PIT199004150', 1990, 15, 4, 3, 3, 'PIT', 'CHN', 0)]"
+      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0],\n ['PHI199005020', 0]]"
      },
      "metadata": {},
      "execution_count": 5
     }
    ],
    "source": [
-    "# Filter the games past May 15 (Approximentally one week) to acquire some data.\n",
-    "game_outcomes_cpy = list(game_outcomes)\n",
-    "filter_games = []\n",
-    "for game in game_outcomes_cpy:\n",
-    "    if (game[2] < 15 and game[3] < 5):        # Remove all games prior to April 15.\n",
-    "        pass\n",
-    "    else:\n",
-    "        filter_games.append(game)\n",
-    "game_outcomes_cpy = None                      # Send the data to the ether to reserve space.\n",
-    "filter_games[0:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The number of game ids: 65734\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0],\n ['PHI199005020', 0]]"
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "# Retrieve only the game ids and their outcomes.\n",
-    "game_ids = [[game_id[0], game_id[8]] for game_id in filter_games]\n",
-    "game_ids = game_ids[200:]                                   # Cut off the first 200 games.\n",
-    "print(\"The number of game ids: {}\".format(len(game_ids)))\n",
+    "# Retrieve only the game ids and their outcomes for modelling purposes. In addition, remove the first 200 games from the model to incur some historic data.\n",
+    "game_ids = [[game_id[0], game_id[8]] for game_id in game_outcomes]\n",
+    "game_ids = game_ids[200:]                                   \n",
     "game_ids[0:5]"
    ]
   },
@@ -121,6 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###########  PICK UP FROM HERE\n",
+    "\n",
     "# Fetch the players and pitchers from the game.\n",
     "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v1')\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
