In Progress: Reorg pitchers to capture all

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "from sys import path\n",
     "from pathlib import Path\n",
     "path.append('../../../') \n",
-    "from BaseballAnalytics.bin.app_utils.queries_vTwo import Queries\n",
+    "from BaseballAnalytics.bin.app_utils.queries_vTwo import Queries as Qu_VTwo\n",
+    "from BaseballAnalytics.bin.app_utils.queries import Queries as Qu\n",
     "from BaseballAnalytics.bin.app_utils.common_help import Log_Helper\n",
     "from pickle import dump, load"
    ]
@@ -36,7 +37,8 @@
    "source": [
     "# Connect to the database.\n",
     "conn = connect(host=\"localhost\", user=\"root\", passwd=\"praquplDop#odlg73h?c\", db=\"baseball_stats_db\")\n",
-    "qu = Queries(conn)"
+    "qu_vTwo = Qu_VTwo(conn)\n",
+    "qu = Qu(conn)"
    ]
   },
   {
@@ -45,17 +47,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1),\n ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0),\n ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0),\n ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0),\n ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1)]"
-     },
-     "metadata": {},
-     "execution_count": 4
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[('ATL199004150', 1990, 15, 4, 6, 13, 'ATL', 'CIN', 1), ('CAL199004150', 1990, 15, 4, 4, 1, 'CAL', 'MIN', 0), ('CHA199004150', 1990, 15, 4, 4, 1, 'CHA', 'CLE', 0), ('DET199004150', 1990, 15, 4, 6, 4, 'DET', 'BAL', 0), ('HOU199004150', 1990, 15, 4, 4, 5, 'HOU', 'LAN', 1)]\n"
     }
    ],
    "source": [
     "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
-    "game_outcomes = qu.get_game_outcomes(day=15, month=5)            \n",
+    "game_outcomes = qu_vTwo.get_game_outcomes(day=15, month=5)            \n",
     "print(game_outcomes[0:5])"
    ]
   },
@@ -82,20 +81,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###########  PICK UP FROM HERE\n",
+    "def fetch_data(query):\n",
     "\n",
-    "# Fetch the players and pitchers from the game.\n",
+    "    # Function Description: Retrieve all the data given a particular query.\n",
+    "    # Function Parameters: query (The query to execute in the database.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: The contents from the query.\n",
+    "    \n",
+    "    try:\n",
+    "        with conn.cursor() as c:\n",
+    "            c.execute(query)\n",
+    "            return c.fetchall()\n",
+    "    except Exception as ex:\n",
+    "        print(\"The expections {}\".format(ex))\n",
+    "        print(\"The query {}\".format(query))\n",
+    "        raise Exception(\"A fire is buring in fetch_data.\")\n",
+    "\n",
+    "def pitcher_query_to_dict(self, data):\n",
+    "    \n",
+    "    # Function Description: Convert the data from a query into a dictionay to be indexed.\n",
+    "    #    The game id MUST BE the first value in the column.\n",
+    "    # Function Parameters: data (The data that was extractred from the query.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: The dictionary containing a list of events associated with the Game Id\n",
+    "    \n",
+    "    query_dict = {}\n",
+    "    for row in data:\n",
+    "        game_id = row[0]\n",
+    "        batting_team = row[4]\n",
+    "        home_team = row[5]\n",
+    "        vis_team = row[6]\n",
+    "        pitcher_name = row[7]\n",
+    "        event_id = row[8]\n",
+    "        if batting_team == '0':\n",
+    "            if home_team not in query_dict:\n",
+    "                query_dict[home_team] = {game_id:[]}\n",
+    "        if row[0] not in query_dict:\n",
+    "            query_dict[row[0]] = [list(row[1:])]\n",
+    "        else:\n",
+    "            game_list = query_dict[row[0]]\n",
+    "            game_list.append(list(row[1:]))\n",
+    "    return query_dict\n",
+    "\n",
+    "def get_pitchers_in_all_games(self, query_loc, get_again_flag=False):\n",
+    "\n",
+    "    # Function Description: Retrieve the list of all pitchers who participated in every game.\n",
+    "    # Function Parameters: query_loc (The location of results of previous queries.), \n",
+    "    #    get_again_flag (The function will talk to the database once again and replace the results. (CI))\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: A dictionary with the game ids as keys storing the pitchers who participates.\n",
+    "\n",
+    "    # Home Team equals 1 for Batting Team. The query is formatted like such: \n",
+    "    #     Game_ID, Batter_Name, Batting_Team, idEvent\n",
+    "    \n",
+    "    if get_again_flag == False:                  # Check if the query was executed before prior to performing another query.\n",
+    "        with open(query_loc, 'rb') as f:\n",
+    "            data = load(f)\n",
+    "            return pitcher_query_to_dict(data)\n",
+    "    game_participants = fetch_data(\"\"\"select event_instance.Game_ID, Year(game_day.date) as Year, Day(game_day.date) as Day,\n",
+    "                                        Month(game_day.date) as Month, batter_in_event.Batting_Team,\n",
+    "                                        game_day.Home_Team, game_day.Visiting_Team,\n",
+    "                                        pitcher_in_event.Pitcher_Name, pitcher_in_event.idEvent\n",
+    "                                        from event_instance\n",
+    "                                        inner join pitcher_in_event on pitcher_in_event.idEvent=event_instance.idEvent\n",
+    "                                        inner join batter_in_event on batter_in_event.idEvent=event_instance.idEvent\n",
+    "                                        inner join game_day on game_day.Game_ID=event_instance.Game_ID\n",
+    "                                        order by game_day.Game_ID\n",
+    "                                \"\"\")\n",
+    "    with open(query_loc, 'wb') as f:\n",
+    "        dump(game_participants, f)\n",
+    "    return pitcher_query_to_dict(game_participants)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch the players, pitchers, and offensive features from all the games.\n",
     "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v1')\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
+    "#all_pitcher = get_pitchers_in_all_games(data_locs / pitchers_pickle, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[0, 'langm001', '0ANA199704020']\n[0, 'langm001', '10ANA199704020']\n[0, 'langm001', '11ANA199704020']\n[0, 'langm001', '12ANA199704020']\n[1, 'gordt001', '13ANA199704020']\n[1, 'gordt001', '14ANA199704020']\n[1, 'gordt001', '15ANA199704020']\n[1, 'gordt001', '16ANA199704020']\n[1, 'gordt001', '17ANA199704020']\n[0, 'langm001', '18ANA199704020']\n[0, 'langm001', '19ANA199704020']\n[0, 'langm001', '1ANA199704020']\n[0, 'langm001', '20ANA199704020']\n[0, 'langm001', '21ANA199704020']\n[0, 'langm001', '22ANA199704020']\n[0, 'langm001', '23ANA199704020']\n[1, 'gordt001', '24ANA199704020']\n[1, 'gordt001', '25ANA199704020']\n[1, 'gordt001', '26ANA199704020']\n[1, 'gordt001', '27ANA199704020']\n[1, 'gordt001', '28ANA199704020']\n[1, 'gordt001', '29ANA199704020']\n[0, 'langm001', '2ANA199704020']\n[0, 'langm001', '30ANA199704020']\n[0, 'langm001', '31ANA199704020']\n[0, 'langm001', '32ANA199704020']\n[1, 'gordt001', '33ANA199704020']\n[1, 'gordt001', '34ANA199704020']\n[1, 'gordt001', '35ANA199704020']\n[1, 'gordt001', '36ANA199704020']\n[1, 'gordt001', '37ANA199704020']\n[0, 'langm001', '38ANA199704020']\n[0, 'langm001', '39ANA199704020']\n[0, 'langm001', '3ANA199704020']\n[0, 'langm001', '40ANA199704020']\n[1, 'gordt001', '41ANA199704020']\n[1, 'gordt001', '42ANA199704020']\n[1, 'gordt001', '43ANA199704020']\n[1, 'gordt001', '44ANA199704020']\n[1, 'gordt001', '45ANA199704020']\n[1, 'eshev001', '46ANA199704020']\n[0, 'langm001', '47ANA199704020']\n[0, 'langm001', '48ANA199704020']\n[0, 'langm001', '49ANA199704020']\n[0, 'langm001', '4ANA199704020']\n[0, 'langm001', '50ANA199704020']\n[0, 'langm001', '51ANA199704020']\n[1, 'eshev001', '52ANA199704020']\n[1, 'eshev001', '53ANA199704020']\n[1, 'eshev001', '54ANA199704020']\n[1, 'eshev001', '55ANA199704020']\n[1, 'eshev001', '56ANA199704020']\n[1, 'henrb001', '57ANA199704020']\n[0, 'jamem001', '58ANA199704020']\n[0, 'jamem001', '59ANA199704020']\n[1, 'gordt001', '5ANA199704020']\n[0, 'jamem001', '60ANA199704020']\n[0, 'jamem001', '61ANA199704020']\n[0, 'jamem001', '62ANA199704020']\n[0, 'mcelc001', '63ANA199704020']\n[1, 'henrb001', '64ANA199704020']\n[1, 'henrb001', '65ANA199704020']\n[1, 'henrb001', '66ANA199704020']\n[1, 'henrb001', '67ANA199704020']\n[1, 'henrb001', '68ANA199704020']\n[0, 'mcelc001', '69ANA199704020']\n[1, 'gordt001', '6ANA199704020']\n[0, 'mcelc001', '70ANA199704020']\n[0, 'mcelc001', '71ANA199704020']\n[0, 'mcelc001', '72ANA199704020']\n[1, 'mahop001', '73ANA199704020']\n[1, 'mahop001', '74ANA199704020']\n[1, 'mahop001', '75ANA199704020']\n[0, 'perct001', '76ANA199704020']\n[0, 'perct001', '77ANA199704020']\n[0, 'perct001', '78ANA199704020']\n[0, 'perct001', '79ANA199704020']\n[1, 'gordt001', '7ANA199704020']\n[0, 'perct001', '80ANA199704020']\n[0, 'perct001', '81ANA199704020']\n[0, 'perct001', '82ANA199704020']\n[0, 'perct001', '83ANA199704020']\n[0, 'harrp001', '84ANA199704020']\n[0, 'harrp001', '85ANA199704020']\n[1, 'sloch001', '86ANA199704020']\n[1, 'sloch001', '87ANA199704020']\n[1, 'sloch001', '88ANA199704020']\n[1, 'sloch001', '89ANA199704020']\n[1, 'gordt001', '8ANA199704020']\n[1, 'sloch001', '90ANA199704020']\n[1, 'sloch001', '91ANA199704020']\n[0, 'langm001', '9ANA199704020']\n"
+    }
+   ],
+   "source": [
+    "for idx, key in enumerate(all_pitcher):\n",
+    "    for i in all_pitcher[key]:\n",
+    "        print(i)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batters_pickle = 'game_players.pickle'\n",
-    "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
-    "offensive_features = qu.get_all_offensive_features(data_locs / offensive_feat_pickle)\n",
-    "all_pitcher = qu.get_pitchers_in_all_games_vOne(data_locs / pitchers_pickle)\n",
     "all_batters = qu.get_batters_in_all_games_vOne(data_locs / batters_pickle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offensive_feat_pickle = 'raw_offensive_features.pickle'\n",
+    "offensive_features = qu.get_all_offensive_features(data_locs / offensive_feat_pickle)"
    ]
   },
   {
