--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
       "text/plain": "[['LAN199005020', 0],\n ['MON199005020', 1],\n ['NYA199005020', 1],\n ['NYN199005020', 0],\n ['PHI199005020', 0]]"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,27 @@
     "        print(\"The query {}\".format(query))\n",
     "        raise Exception(\"A fire is buring in fetch_data.\")\n",
     "\n",
-    "def pitcher_query_to_dict(self, data):\n",
+    "def add_event(team, query_dict, game_id, pitcher_name, event_id):\n",
+    "\n",
+    "    # Function Description: The function will add the pitcher names to the game event.\n",
+    "    # Function Parameters: team (The team to add the event.), \n",
+    "    #    query_dict (The dictionary that holds all the events.), \n",
+    "    #    game_id (The game id the event is associated with.), \n",
+    "    #    pitcher_name (The pitcher name that was in the event.), \n",
+    "    #    event_id (The name of the event id.)\n",
+    "    # Function Throws: Nothing\n",
+    "    # Function Returns: Nothing\n",
+    "\n",
+    "    if team not in query_dict: \n",
+    "        query_dict[team] = {game_id:[pitcher_name, event_id]}\n",
+    "    else:\n",
+    "        game_events = query_dict[team]\n",
+    "        if game_id not in game_events: \n",
+    "            game_events = [[pitcher_name, event_id]]\n",
+    "        else:\n",
+    "            game_events.append([pitcher_name, event_id])\n",
+    "\n",
+    "def pitcher_query_to_dict(data):\n",
     "    \n",
     "    # Function Description: Convert the data from a query into a dictionay to be indexed.\n",
     "    #    The game id MUST BE the first value in the column.\n",
@@ -117,17 +137,13 @@
     "        vis_team = row[6]\n",
     "        pitcher_name = row[7]\n",
     "        event_id = row[8]\n",
-    "        if batting_team == '0':\n",
-    "            if home_team not in query_dict:\n",
-    "                query_dict[home_team] = {game_id:[]}\n",
-    "        if row[0] not in query_dict:\n",
-    "            query_dict[row[0]] = [list(row[1:])]\n",
+    "        if batting_team == '1':                        # Add home pitchers to the proper game depending on home team or away team.\n",
+    "            add_event(home_team, query_dict, game_id, pitcher_name, event_id)\n",
     "        else:\n",
-    "            game_list = query_dict[row[0]]\n",
-    "            game_list.append(list(row[1:]))\n",
+    "            add_event(vis_team, query_dict, game_id, pitcher_name, event_id)\n",
     "    return query_dict\n",
     "\n",
-    "def get_pitchers_in_all_games(self, query_loc, get_again_flag=False):\n",
+    "def get_pitchers_in_all_games(query_loc, get_again_flag=False):\n",
     "\n",
     "    # Function Description: Retrieve the list of all pitchers who participated in every game.\n",
     "    # Function Parameters: query_loc (The location of results of previous queries.), \n",
@@ -150,7 +166,6 @@
     "                                        inner join pitcher_in_event on pitcher_in_event.idEvent=event_instance.idEvent\n",
     "                                        inner join batter_in_event on batter_in_event.idEvent=event_instance.idEvent\n",
     "                                        inner join game_day on game_day.Game_ID=event_instance.Game_ID\n",
-    "                                        order by game_day.Game_ID\n",
     "                                \"\"\")\n",
     "    with open(query_loc, 'wb') as f:\n",
     "        dump(game_participants, f)\n",
@@ -159,36 +174,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyError",
+     "evalue": "'ANA200004030'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-c7c70c108462>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdata_locs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpitchers_pickle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'game_pitchers.pickle'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mall_pitcher\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_pitchers_in_all_games\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_locs\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mpitchers_pickle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-e1d81d881f99>\u001b[0m in \u001b[0;36mget_pitchers_in_all_games\u001b[1;34m(query_loc, get_again_flag)\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery_loc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m         \u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_participants\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mpitcher_query_to_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgame_participants\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-e1d81d881f99>\u001b[0m in \u001b[0;36mpitcher_query_to_dict\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[0madd_event\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhome_team\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_id\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitcher_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevent_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m             \u001b[0madd_event\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvis_team\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame_id\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpitcher_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevent_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-e1d81d881f99>\u001b[0m in \u001b[0;36madd_event\u001b[1;34m(team, query_dict, game_id, pitcher_name, event_id)\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mteam\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mgame_id\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevent_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m         \u001b[0mgame_events\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mquery_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgame_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m         \u001b[0mgame_events\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevent_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'ANA200004030'"
+     ]
+    }
+   ],
    "source": [
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
-    "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v1')\n",
+    "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2')\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
-    "#all_pitcher = get_pitchers_in_all_games(data_locs / pitchers_pickle, True)"
+    "all_pitcher = get_pitchers_in_all_games(data_locs / pitchers_pickle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "outputPrepend"
     ]
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[0, 'langm001', '0ANA199704020']\n[0, 'langm001', '10ANA199704020']\n[0, 'langm001', '11ANA199704020']\n[0, 'langm001', '12ANA199704020']\n[1, 'gordt001', '13ANA199704020']\n[1, 'gordt001', '14ANA199704020']\n[1, 'gordt001', '15ANA199704020']\n[1, 'gordt001', '16ANA199704020']\n[1, 'gordt001', '17ANA199704020']\n[0, 'langm001', '18ANA199704020']\n[0, 'langm001', '19ANA199704020']\n[0, 'langm001', '1ANA199704020']\n[0, 'langm001', '20ANA199704020']\n[0, 'langm001', '21ANA199704020']\n[0, 'langm001', '22ANA199704020']\n[0, 'langm001', '23ANA199704020']\n[1, 'gordt001', '24ANA199704020']\n[1, 'gordt001', '25ANA199704020']\n[1, 'gordt001', '26ANA199704020']\n[1, 'gordt001', '27ANA199704020']\n[1, 'gordt001', '28ANA199704020']\n[1, 'gordt001', '29ANA199704020']\n[0, 'langm001', '2ANA199704020']\n[0, 'langm001', '30ANA199704020']\n[0, 'langm001', '31ANA199704020']\n[0, 'langm001', '32ANA199704020']\n[1, 'gordt001', '33ANA199704020']\n[1, 'gordt001', '34ANA199704020']\n[1, 'gordt001', '35ANA199704020']\n[1, 'gordt001', '36ANA199704020']\n[1, 'gordt001', '37ANA199704020']\n[0, 'langm001', '38ANA199704020']\n[0, 'langm001', '39ANA199704020']\n[0, 'langm001', '3ANA199704020']\n[0, 'langm001', '40ANA199704020']\n[1, 'gordt001', '41ANA199704020']\n[1, 'gordt001', '42ANA199704020']\n[1, 'gordt001', '43ANA199704020']\n[1, 'gordt001', '44ANA199704020']\n[1, 'gordt001', '45ANA199704020']\n[1, 'eshev001', '46ANA199704020']\n[0, 'langm001', '47ANA199704020']\n[0, 'langm001', '48ANA199704020']\n[0, 'langm001', '49ANA199704020']\n[0, 'langm001', '4ANA199704020']\n[0, 'langm001', '50ANA199704020']\n[0, 'langm001', '51ANA199704020']\n[1, 'eshev001', '52ANA199704020']\n[1, 'eshev001', '53ANA199704020']\n[1, 'eshev001', '54ANA199704020']\n[1, 'eshev001', '55ANA199704020']\n[1, 'eshev001', '56ANA199704020']\n[1, 'henrb001', '57ANA199704020']\n[0, 'jamem001', '58ANA199704020']\n[0, 'jamem001', '59ANA199704020']\n[1, 'gordt001', '5ANA199704020']\n[0, 'jamem001', '60ANA199704020']\n[0, 'jamem001', '61ANA199704020']\n[0, 'jamem001', '62ANA199704020']\n[0, 'mcelc001', '63ANA199704020']\n[1, 'henrb001', '64ANA199704020']\n[1, 'henrb001', '65ANA199704020']\n[1, 'henrb001', '66ANA199704020']\n[1, 'henrb001', '67ANA199704020']\n[1, 'henrb001', '68ANA199704020']\n[0, 'mcelc001', '69ANA199704020']\n[1, 'gordt001', '6ANA199704020']\n[0, 'mcelc001', '70ANA199704020']\n[0, 'mcelc001', '71ANA199704020']\n[0, 'mcelc001', '72ANA199704020']\n[1, 'mahop001', '73ANA199704020']\n[1, 'mahop001', '74ANA199704020']\n[1, 'mahop001', '75ANA199704020']\n[0, 'perct001', '76ANA199704020']\n[0, 'perct001', '77ANA199704020']\n[0, 'perct001', '78ANA199704020']\n[0, 'perct001', '79ANA199704020']\n[1, 'gordt001', '7ANA199704020']\n[0, 'perct001', '80ANA199704020']\n[0, 'perct001', '81ANA199704020']\n[0, 'perct001', '82ANA199704020']\n[0, 'perct001', '83ANA199704020']\n[0, 'harrp001', '84ANA199704020']\n[0, 'harrp001', '85ANA199704020']\n[1, 'sloch001', '86ANA199704020']\n[1, 'sloch001', '87ANA199704020']\n[1, 'sloch001', '88ANA199704020']\n[1, 'sloch001', '89ANA199704020']\n[1, 'gordt001', '8ANA199704020']\n[1, 'sloch001', '90ANA199704020']\n[1, 'sloch001', '91ANA199704020']\n[0, 'langm001', '9ANA199704020']\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for idx, key in enumerate(all_pitcher):\n",
-    "    for i in all_pitcher[key]:\n",
-    "        print(i)\n",
-    "    break"
+    "for idx, team in enumerate(all_pitcher):\n",
+    "    all_team = all_pitcher[team]\n",
+    "    for idx2, game_id in enumerate(all_team):\n",
+    "        print(all_team[game_id])\n",
+    "        if idx2 > 6:\n",
+    "            print(len(all_team[game_id])) \n",
+    "            break\n",
+    "    print(len(all_team))\n",
+    "    break\n",
+    "print(len(all_pitcher))"
    ]
   },
   {
