New: Record pitchers within the game

--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,9 @@
    ],
    "source": [
     "# Get all the game ids with the relevent information attributed to those id. Ensure to get games past May 15.\n",
+    "# The games are returned from earliest played to most recent.\n",
     "game_outcomes = qu_vTwo.get_game_outcomes(day=15, month=5)            \n",
-    "print(game_outcomes[0:5])"
+    "game_outcomes[0:5]"
    ]
   },
   {
@@ -88,40 +89,54 @@
     "# Fetch the players, pitchers, and offensive features from all the games.\n",
     "data_locs = Path(r'C:\\Users\\micha\\Documents\\Baseball_Analytics_Source_Data\\model_v2')\n",
     "pitchers_pickle = 'game_pitchers.pickle'\n",
-    "all_pitcher = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)"
+    "all_pitcher = qu_vTwo.get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
+    "qu_vTwo.unpack_pitchers(all_pitcher)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "An Event ['langm001', '0ANA199704020']\nNum Events 92\nNum Games 81\nNum Years 30\nNum Teams 33\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#qu_vTwo.unpack_pitchers(all_pitcher)\n",
+    "from re import search\n",
+    "\n",
+    "def process_game(game_events):\n",
+    "\n",
+    "    \"\"\"Function Description: Process a game by capturing all the pitchers who participated for the team.\n",
+    "    Function Parameters: game_events (The events related to the specific game.)\n",
+    "    Function Throws: Nothing\n",
+    "    Function Returns: A dictionary formatted like such. {pitcher_name : [num_instances, apearance_in_game]}\"\"\"\n",
+    "\n",
+    "    ordered_events = game_events.sort(key=lambda x: int(search(r'\\d+', x[1][:3]).group()))      # Sort the string by the leading numbers of each id.\n",
+    "    game_profile = {}\n",
+    "    num_instance = 1\n",
+    "    for event in game_events:\n",
+    "        pitcher_name = event[0]\n",
+    "        if pitcher_name not in game_profile:                    # If a new pitcher is observed, add it to the dictionary.\n",
+    "            game_profile[pitcher_name] = [1, num_instance]\n",
+    "            num_instance += 1\n",
+    "        else:\n",
+    "            game_profile[pitcher_name][0] += 1\n",
+    "    return game_profile \n",
     "\n",
     "def process_year(year_games, window_size=40):\n",
     "\n",
-    "    # Function Description: Process a year of players compiling all the rosters into their respective windows.\n",
-    "    # Function Parameters: year_games (The dictionary containing all the games and their events), \n",
-    "    #    window_size (The size of the window to consolidate all the players.)\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: A list of size n, where n is the number of frames. The frames themselves contain the pitching roster.\n",
+    "    \"\"\"Function Description: Process a year of players compiling all the rosters into their respective windows.\n",
+    "    Function Parameters: year_games (The dictionary containing all the games and their events), \n",
+    "        window_size (The size of the window to consolidate all the players.)\n",
+    "    Function Throws: Nothing\n",
+    "    Function Returns: A list of size n, where n is the number of frames. The frames themselves contain the pitching roster.\"\"\"\n",
     "\n",
     "    pass \n",
     "\n",
     "def get_pitchers_in_windows(pitchers, window_size=40):\n",
     "\n",
-    "    # Function Description: Retrieve all the pitchers who participated on the teams starting lineup.\n",
+    "    \"\"\"# Function Description: Retrieve all the pitchers who participated on the teams starting lineup.\n",
     "    # Function Parameters: pitchers (The dictionary containing all the pitchers.), \n",
     "    #    window_size (The pitchers on the roster within the specified timeframe.)\n",
     "    # Function Throws: Nothing\n",
-    "    # Function Returns: A dictionary containing the pitcher names within the specified time frame.\n",
+    "    # Function Returns: A dictionary containing the pitcher names within the specified time frame.\"\"\"\n",
     "\n",
     "    starting_rosters = {}\n",
     "    for team in pitchers:\n",
@@ -130,93 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "   \n",
-    "### FIIIIIIIIIIIIIIIIIX\n",
-    "def add_event(team, year, query_dict, game_id, pitcher_name, event_id):\n",
-    "\n",
-    "    \"\"\"# Function Description: The function will add the pitcher names to the game event.\n",
-    "    # Function Parameters: team (The team to add the event.),\n",
-    "    #    year (The year that was played.) \n",
-    "    #    query_dict (The dictionary that holds all the events.), \n",
-    "    #    game_id (The game id the event is associated with.), \n",
-    "    #    pitcher_name (The pitcher name that was in the event.), \n",
-    "    #    event_id (The name of the event id.)\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: Nothing - But it will modify a dictionary to hold game ids each with the home pitchers and away pitchers.\n",
-    "    #    {team : {year : {game_id : [pitcher_name, event_id]}}}\"\"\"    \n",
-    "    \n",
-    "    if team not in query_dict:                                              # A team does not exist, create a team. \n",
-    "        query_dict[team] = {year : {game_id : [[pitcher_name, event_id]]}}     \n",
-    "    else:\n",
-    "        team_year = query_dict[team]\n",
-    "        if year not in team_year:                                           # A year does not exist, create a year.\n",
-    "            team_year[year] = {game_id : [[pitcher_name, event_id]]}\n",
-    "        else:\n",
-    "            year_games = team_year[year]\n",
-    "            if game_id not in year_games:                                   # A game does not exist, create a game.\n",
-    "                year_games[game_id] = [[pitcher_name, event_id]]\n",
-    "            else:\n",
-    "                year_games[game_id].append([pitcher_name, event_id])\n",
-    "\n",
-    "def pitcher_query_to_dict(data):\n",
-    "    \n",
-    "    \"\"\"# Function Description: Convert the data from a query into a dictionay to be indexed.\n",
-    "    #    The game id MUST BE the first value in the column.\n",
-    "    # Function Parameters: data (The data that was extractred from the query.)\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: The dictionary containing a list of events associated with the Game Id.\"\"\"\n",
-    "    \n",
-    "    query_dict = {}\n",
-    "    for row in data:\n",
-    "        game_id = row[0]\n",
-    "        year = row[1]\n",
-    "        batting_team = row[4]\n",
-    "        home_team = row[5]\n",
-    "        vis_team = row[6]\n",
-    "        pitcher_name = row[7]\n",
-    "        event_id = row[8]\n",
-    "        if batting_team == 1:                        # Add home pitchers to the proper game depending on home team or away team.\n",
-    "            add_event(home_team, year, query_dict, game_id, pitcher_name, event_id)\n",
-    "        else:\n",
-    "            add_event(vis_team, year, query_dict, game_id, pitcher_name, event_id)\n",
-    "    return query_dict\n",
-    "\n",
-    "def get_pitchers_in_all_games(query_loc, get_again_flag=False):\n",
-    "\n",
-    "    \"\"\"# Function Description: Retrieve the list of all pitchers who participated in every game.\n",
-    "    # Function Parameters: query_loc (The location of results of previous queries.), \n",
-    "    #    get_again_flag (The function will talk to the database once again and replace the results. (CI))\n",
-    "    # Function Throws: Nothing\n",
-    "    # Function Returns: A dictionary with the game ids as keys storing the pitchers who participates.\"\"\"\n",
-    "\n",
-    "    # Home Team equals 1 for Batting Team. The query is formatted like such: \n",
-    "    #     Game_ID, Batter_Name, Batting_Team, idEvent\n",
-    "\n",
-    "    if get_again_flag == False:                  # Check if the query was executed before prior to performing another query.\n",
-    "        with open(query_loc, 'rb') as f:\n",
-    "            data = load(f)\n",
-    "            return pitcher_query_to_dict(data)\n",
-    "    game_participants = qu_vTwo.fetch_data(\"\"\"select event_instance.Game_ID, Year(game_day.date) as Year, Day(game_day.date) as Day,\n",
-    "                                        Month(game_day.date) as Month, batter_in_event.Batting_Team,\n",
-    "                                        game_day.Home_Team, game_day.Visiting_Team,\n",
-    "                                        pitcher_in_event.Pitcher_Name, pitcher_in_event.idEvent\n",
-    "                                        from event_instance\n",
-    "                                        inner join pitcher_in_event on pitcher_in_event.idEvent=event_instance.idEvent\n",
-    "                                        inner join batter_in_event on batter_in_event.idEvent=event_instance.idEvent\n",
-    "                                        inner join game_day on game_day.Game_ID=event_instance.Game_ID\n",
-    "                                \"\"\")\n",
-    "    with open(query_loc, 'wb') as f:\n",
-    "        dump(game_participants, f)\n",
-    "    return pitcher_query_to_dict(game_participants)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -1289,12 +1218,18 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "An Event ['langm001', '0ANA199704020']\nNum Events 46\nNum Games 162\nNum Years 30\nNum Teams 33\n"
+     "text": "ANA199704020 {'langm001': [26, 1], 'jamem001': [5, 2], 'mcelc001': [5, 3], 'perct001': [8, 4], 'harrp001': [2, 5]}\nBOS199705060 {'rosaj001': [28, 1], 'pichh001': [5, 2]}\nTEX199705020 {'pattd001': [10, 1], 'wettj001': [5, 2], 'burkj001': [29, 3], 'gunde001': [1, 4]}\nANA199704030 {'dickj001': [29, 1]}\nTEX199705030 {'olivd001': [29, 1], 'santj001': [11, 2], 'hernx001': [7, 3], 'vosbe001': [1, 4]}\nBOS199705070 {'radkb001': [26, 1], 'ritct001': [13, 2], 'olsog001': [5, 3]}\nBOS199704120 {'fassj001': [32, 1], 'charn001': [3, 2]}\n"
     }
    ],
    "source": [
-    "#all_pitcher = get_pitchers_in_all_games(data_locs / pitchers_pickle)\n",
-    "qu_vTwo.unpack_pitchers(all_pitcher)"
+    "for team in all_pitcher:\n",
+    "    for year in all_pitcher[team]:\n",
+    "        for idx, game in enumerate(all_pitcher[team][year]):\n",
+    "            print(game, end=' ')\n",
+    "            print(process_game(all_pitcher[team][year][game]))\n",
+    "            if idx > 5: break\n",
+    "        break\n",
+    "    break"
    ]
   },
   {
