--- a/bin/modelling/model_two.ipynb
+++ b/bin/modelling/model_two.ipynb
@@ -95,12 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from re import search\n",
-    "\n",
     "def process_game(game_events):\n",
     "\n",
     "    \"\"\"Function Description: Process a game by capturing all the pitchers who participated for the team.\n",
@@ -120,15 +118,77 @@
     "            game_profile[pitcher_name][0] += 1\n",
     "    return game_profile \n",
     "\n",
+    "def order_pitchers(pitcher_appearences):\n",
+    "\n",
+    "    \"\"\"Function Description: Order the pitchers from most innings played to least.\n",
+    "    Function Parameter: pitcher_appearences (The dictionary of pitchers who participated in the games.)\n",
+    "    Function Throws: Nothing\n",
+    "    Function Returns: The list of pitchers.\"\"\"\n",
+    "\n",
+    "    pitchers = []\n",
+    "    for counter in len(pitcher_appearences):\n",
+    "        max = 0\n",
+    "        max_pitcher = \"\"\n",
+    "        for pitcher, num in pitcher_appearences.items():\n",
+    "            if num > max:\n",
+    "                max = num\n",
+    "                max_pitcher = pitcher\n",
+    "        pitchers.append(max_pitcher)\n",
+    "        del pitcher_appearences[max_pitcher]\n",
+    "    print(len(pitchers))\n",
+    "    return pitchers\n",
+    "\n",
+    "def add_pitcher_to_dict(dictionary, pitcher, innings):\n",
+    "\n",
+    "    \"\"\" \"\"\"\n",
+    "\n",
+    "def get_pitchers_in_window(games):\n",
+    "\n",
+    "    \"\"\"Function Description: Given the pitchers in a window, determine the entire pitching roster.\n",
+    "    Function Parameters: games (The games to be processed.)\n",
+    "    Function Throws: Nothing\n",
+    "    Function Returns: A tuple of lists containing the pitchers ordered by number of innings played.\n",
+    "        The first element contains the starting pitchers. The second element contains the relief pitchers.\"\"\"\n",
+    "\n",
+    "    starter_total_innings = {}\n",
+    "    relief_total_inings = {}\n",
+    "    for game in games:\n",
+    "        game_pitchers = game[0]\n",
+    "        for pitcher in game_pitchers:                                          # Aggregate the pitchers within the rosters by number of appearances and position.\n",
+    "            if pitcher not in total_innings:\n",
+    "                if game_pitchers[pitcher][1] == 1:                             # If the appearance number equals 1, then it is a starting pitcher. \n",
+    "                    starter_total_innings[pitcher] = game_pitchers[pitcher][0]\n",
+    "                else:\n",
+    "                    relief_total_inings[pitcher] = game_pitchers[pitcher][0]\n",
+    "            else:\n",
+    "                if game_pitchers[pitcher][1] == 1:\n",
+    "                    starter_total_innings[pitcher] += game_pitchers[pitcher][0]\n",
+    "                else:\n",
+    "                    relief_total_inings[pitcher] += game_pitchers[pitcher][0]\n",
+    "    print(len(starter_total_innings))\n",
+    "    print(len(relief_total_inings))\n",
+    "    return (order_pitchers(starter_total_innings), order_pitchers(relief_total_inings)) \n",
+    "\n",
+    "\n",
     "def process_year(year_games, window_size=40):\n",
     "\n",
     "    \"\"\"Function Description: Process a year of players compiling all the rosters into their respective windows.\n",
     "    Function Parameters: year_games (The dictionary containing all the games and their events), \n",
     "        window_size (The size of the window to consolidate all the players.)\n",
     "    Function Throws: Nothing\n",
-    "    Function Returns: A list of size n, where n is the number of frames. The frames themselves contain the pitching roster.\"\"\"\n",
+    "    Function Returns: A dictionary containing the games and the expected roster. {game_id : {pitcher_one, pitcher_two, ..., pitcher_n}}\"\"\"\n",
     "\n",
-    "    pass \n",
+    "    roster_dict = {}\n",
+    "    agg_pitchers = [[game_id, process_game(year_games[game_id])] for game_id in year_games]\n",
+    "    agg_pitchers.sort(key=lambda x: x[0][3:])        # Sort the string by the ending game digits.\n",
+    "    window_counter = 0\n",
+    "    window_min = 0\n",
+    "    window_max = window_size\n",
+    "    while window_max <= len(year_games):          # Find the pitchers on the roster within the desired time frame.\n",
+    "        print(get_pitchers_in_window(agg_pitchers[window_min:window_max]))\n",
+    "        window_min = window_max\n",
+    "        window_max += window_size\n",
+    "        break\n",
     "\n",
     "def get_pitchers_in_windows(pitchers, window_size=40):\n",
     "\n",
@@ -145,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -1218,16 +1278,27 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "ANA199704020 {'langm001': [26, 1], 'jamem001': [5, 2], 'mcelc001': [5, 3], 'perct001': [8, 4], 'harrp001': [2, 5]}\nBOS199705060 {'rosaj001': [28, 1], 'pichh001': [5, 2]}\nTEX199705020 {'pattd001': [10, 1], 'wettj001': [5, 2], 'burkj001': [29, 3], 'gunde001': [1, 4]}\nANA199704030 {'dickj001': [29, 1]}\nTEX199705030 {'olivd001': [29, 1], 'santj001': [11, 2], 'hernx001': [7, 3], 'vosbe001': [1, 4]}\nBOS199705070 {'radkb001': [26, 1], 'ritct001': [13, 2], 'olsog001': [5, 3]}\nBOS199704120 {'fassj001': [32, 1], 'charn001': [3, 2]}\n"
+     "text": "1997 162\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'total_innings' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-5aeb7905f6f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0myear\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mall_pitcher\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mprocess_year\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_pitcher\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-29-dcc2c9e69087>\u001b[0m in \u001b[0;36mprocess_year\u001b[1;34m(year_games, window_size)\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mwindow_max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwindow_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mwindow_max\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myear_games\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m          \u001b[1;31m# Find the pitchers on the roster within the desired time frame.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_pitchers_in_window\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magg_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mwindow_min\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mwindow_max\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m         \u001b[0mwindow_min\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwindow_max\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m         \u001b[0mwindow_max\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mwindow_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-29-dcc2c9e69087>\u001b[0m in \u001b[0;36mget_pitchers_in_window\u001b[1;34m(games)\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mgame_pitchers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m:\u001b[0m                                          \u001b[1;31m# Aggregate the pitchers within the rosters by number of appearances and position.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtotal_innings\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m                             \u001b[1;31m# If the appearance number equals 1, then it is a starting pitcher.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m                     \u001b[0mstarter_total_innings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame_pitchers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'total_innings' is not defined"
+     ]
     }
    ],
    "source": [
     "for team in all_pitcher:\n",
     "    for year in all_pitcher[team]:\n",
-    "        for idx, game in enumerate(all_pitcher[team][year]):\n",
-    "            print(game, end=' ')\n",
-    "            print(process_game(all_pitcher[team][year][game]))\n",
-    "            if idx > 5: break\n",
+    "        print(year, end=' ')\n",
+    "        process_year(all_pitcher[team][year])\n",
     "        break\n",
     "    break"
    ]
